<resources>
    <string name="app_name">FlagQuizApp</string>
    <string name="app_title">4択国旗クイズ</string>
    <string name="start_button">スタート</string>
    <string name="option1">選択肢1</string>
    <string name="option2">選択肢2</string>
    <string name="option3">選択肢3</string>
    <string name="option4">選択肢4</string>
    <string name="game_over">終了！</string>
    <string name="incorrect_flag">間違えた国旗の国名</string>
    <string name="incorrect_country_name_placeholder">間違えた国旗</string>
    <string name="return_title">タイトルへ戻る</string>
    <string name="score">正解国数：%1$d/196</string>
</resources>