<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#EFEFEF"
    >

    <!-- 国旗を表示する ImageView -->
    <ImageView
        android:id="@+id/flagImage"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:background="#EFEFEF"/>

    <!-- 4つの選択肢ボタン -->
    <Button
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option1"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option2"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option3"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/option4"
        android:layout_marginBottom="0dp"/>
</LinearLayout>
